--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,18 +1,17 @@
 .container {
     width: 500px;
-    height: 600px;
+    /* height: 600px; */
     background-color: #006937;
     border-radius: 8px;
     margin: auto;
-    padding-top: 20px;
     position: relative;
-    margin-top: 20px;
+    padding-top: 4px;
 }
 
 .title {
-    margin-top: 0px;
     color: white;
     text-align: center;
+    margin: 20px 0px;
 }
 
 .referencia {
@@ -22,6 +21,7 @@
 
 .info-div {
     width: 80%;
+    height: 100%;
     margin: auto;
     color: white;
     display: flex;
@@ -29,16 +29,53 @@
 }
 
 .info-title {
-    margin-bottom: 40px;
+    margin: 30px 0px;
 }
 
 .info-descuento {
     font-size: 40px;
     font-weight: bold;
     /* background-color: #00ac59; */
-    margin: 5px 0;
-    display: inline-block;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     border-radius: 8px;
+}
+
+.descuento-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.descuento-texto {
+    font-size: 20px;
+}
+
+.counter-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.descuento-title, .counter-title {
+    font-size: 14px;
+}
+
+.counter-clock {
+    display: flex;
+    flex-direction: row;
+}
+
+.time {
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 8px;
+    margin: 0 2px;
+    padding: 0px 4px;
+}
+
+.counter-clock {
+    margin: 5px 0;
 }
 
 .button {
@@ -48,10 +85,9 @@
     border-radius: 8px;
     border-style: none;
     font-size: 16px;
-    position: absolute;
-    bottom: 25px;
-    left: 50%;
-    transform: translate(-50%, 0);
+    margin: 30px auto;
+    width: 60%;
+    text-align: center;
     transition: all 0.3s ease;
     text-decoration: none;
 }
